# calculator

./: .flake8  LICENSE  README.md  noxfile.py  pylintrc  pyproject.toml  pytest-report.xml  requirements.txt
calculator/: calculator.py
tests/: test_calculator.py
